refactor: move state plotting code to new plot_states.py

--- a/postreise/plot/demo/state_goals_map_demo.ipynb
+++ b/postreise/plot/demo/state_goals_map_demo.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "from bokeh.io import show\n",
-    "from postreise.plot import plot_carbon_map \n",
+    "from postreise.plot.plot_states import plot_states \n",
     "import pandas as pd"
    ]
   },
@@ -123,13 +123,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goals_demo = plot_carbon_map.plot_states(state_list=df.State, \n",
-    "                                         col_list=df.Color,\n",
-    "                                         labels_list=df.Label,\n",
-    "                                         leg_color=df_leg.Color,\n",
-    "                                         leg_label=df_leg.Label,\n",
-    "                                         font_size=\"10pt\",\n",
-    "                                         web= True)\n",
+    "goals_demo = plot_states(\n",
+    "    state_list=df.State, \n",
+    "    color_list=df.Color,\n",
+    "    labels_list=df.Label,\n",
+    "    leg_color=df_leg.Color,\n",
+    "    leg_label=df_leg.Label,\n",
+    "    font_size=\"10pt\",\n",
+    "    web=True\n",
+    ")\n",
     "show(goals_demo)"
    ]
   }
