docs: update doc strings in the plot function and demo notebook

--- a/postreise/plot/demo/pie_generation_vs_capacity.ipynb
+++ b/postreise/plot/demo/pie_generation_vs_capacity.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pie Plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
