refactor: abstract grid model

--- a/postreise/plot/demo/emissions_map_demo.ipynb
+++ b/postreise/plot/demo/emissions_map_demo.ipynb
@@ -139,7 +139,7 @@
    ],
    "source": [
     "base_carbon_by_bus = emissions.summarize_emissions_by_bus(emissions.generate_emissions_stats(base), \n",
-    "                                                          base_grid.plant)"
+    "                                                          base_grid)"
    ]
   },
   {
@@ -157,7 +157,7 @@
    ],
    "source": [
     "ambitious_carbon_by_bus = emissions.summarize_emissions_by_bus(emissions.generate_emissions_stats(ambitious), \n",
-    "                                                               ambitious_grid.plant)"
+    "                                                               ambitious_grid)"
    ]
   },
   {
