--- a/postreise/plot/demo/state_goals_map_demo.ipynb
+++ b/postreise/plot/demo/state_goals_map_demo.ipynb
@@ -37,53 +37,53 @@
    "source": [
     "#prepare data for mapping \n",
     "\n",
-    "rps_states = (\"AL\", \"AR\", \"AZ\", \"CA\", \"CO\",\n",
-    "              \"CT\", \"DE\", \"FL\",\"GA\", \"IA\", \n",
-    "              \"ID\", \"IL\", \"IN\", \"KS\", \"KY\",\n",
-    "              \"LA\", \"MA\", \"MD\", \"ME\", \"MI\",\n",
-    "              \"MN\", \"MO\", \"MS\", \"MT\", \"NC\", \n",
-    "              \"ND\", \"NE\", \"NH\",\"NJ\",\"NM\",\n",
-    "              \"NV\",\"NY\", \"OH\", \"OK\",\"OR\",\n",
-    "              \"PA\",\"RI\",\"SC\", \"SD\",\"TN\", \n",
-    "              \"TX\",\"UT\", \"VA\",\"VT\", \"WA\",\n",
-    "              \"WI\", \"WV\",\"WY\",)\n",
+    "rps_states = (\n",
+    "    \"AL\", \"AR\", \"AZ\", \"CA\", \"CO\",\n",
+    "    \"CT\", \"DE\", \"FL\",\"GA\", \"IA\",\n",
+    "    \"ID\", \"IL\", \"IN\", \"KS\", \"KY\",\n",
+    "    \"LA\", \"MA\", \"MD\", \"ME\", \"MI\",\n",
+    "    \"MN\", \"MO\", \"MS\", \"MT\", \"NC\",\n",
+    "    \"ND\", \"NE\", \"NH\",\"NJ\",\"NM\",\n",
+    "    \"NV\",\"NY\", \"OH\", \"OK\",\"OR\",\n",
+    "    \"PA\",\"RI\",\"SC\", \"SD\",\"TN\",\n",
+    "    \"TX\",\"UT\", \"VA\",\"VT\", \"WA\",\n",
+    "    \"WI\", \"WV\",\"WY\"\n",
+    ")\n",
     "\n",
-    "color_list = (\"#EBEEF1\",\"#EBEEF1\",\"#99CFF6\",\"#0D68DC\",\"#1490FF\",\n",
-    "              \"#107CED\",\"#1490FF\",\"#EBEEF1\",\"#EBEEF1\", \"#EBEEF1\",\n",
-    "              \"#EBEEF1\",\"#1490FF\",\"#99CFF6\",\"#47AFFB\",\"#EBEEF1\",\n",
-    "              \"#EBEEF1\",\"#107CED\",\"#107CED\",\"#0A55CC\",\"#107CED\",\n",
-    "              \"#1490FF\",\"#99CFF6\", \"#EBEEF1\", \"#99CFF6\", \"#99CFF6\",\n",
-    "              \n",
-    "              \"#99CFF6\",\"#EBEEF1\",\"#1490FF\",\"#107CED\",\"#107CED\",\n",
-    "              \"#107CED\", \"#0D68DC\",\"#99CFF6\",\"#99CFF6\",\"#1490FF\",\n",
-    "              \"#47AFFB\",\"#107CED\",\"#99CFF6\",\"#99CFF6\",\"#EBEEF1\",\n",
-    "              \"#107CED\",\"#47AFFB\",\"#99CFF6\",\"#0A55CC\",\"#0A55CC\",\n",
-    "              \"#99CFF6\",\"#EBEEF1\",\"#EBEEF1\",\n",
-    "              )\n",
+    "color_list = (\n",
+    "    \"#EBEEF1\",\"#EBEEF1\",\"#99CFF6\",\"#0D68DC\",\"#1490FF\",\n",
+    "    \"#107CED\",\"#1490FF\",\"#EBEEF1\",\"#EBEEF1\", \"#EBEEF1\",\n",
+    "    \"#EBEEF1\",\"#1490FF\",\"#99CFF6\",\"#47AFFB\",\"#EBEEF1\",\n",
+    "    \"#EBEEF1\",\"#107CED\",\"#107CED\",\"#0A55CC\",\"#107CED\",\n",
+    "    \"#1490FF\",\"#99CFF6\", \"#EBEEF1\", \"#99CFF6\", \"#99CFF6\",\n",
+    "    \"#99CFF6\",\"#EBEEF1\",\"#1490FF\",\"#107CED\",\"#107CED\",\n",
+    "    \"#107CED\", \"#0D68DC\",\"#99CFF6\",\"#99CFF6\",\"#1490FF\",\n",
+    "    \"#47AFFB\",\"#107CED\",\"#99CFF6\",\"#99CFF6\",\"#EBEEF1\",\n",
+    "    \"#107CED\",\"#47AFFB\",\"#99CFF6\",\"#0A55CC\",\"#0A55CC\",\n",
+    "    \"#99CFF6\",\"#EBEEF1\",\"#EBEEF1\",\n",
+    ")\n",
     "\n",
-    "label_list = (\"no clean energy goals\", \"no clean energy goals\",  \"15% in 2025\", \n",
-    "              \"60% in 2030, 100% in 2045\", \"30% in 2020, 100% in 2050\",\n",
-    "              \"44% in 2025\",\"25% in 2025\",\"no clean energy goals\", \"no clean energy goals\", \"no clean energy goals\",\n",
-    "              \"no clean energy goals\", \"25% in 2025\",\"10% in 2015\",\"20% in 2020\",\"no clean energy goals\",\n",
-    "              \"no clean energy goals\", \" 35% in 2030\",\"30% in 2020 and 50% in 2030\", \n",
-    "              \"80% in 2030, 100% in 2050\",\"15% in 2020 and 35% in 2025\",\n",
-    "              \"25% in 2025\",\"15% in 2020\", \"no clean energy goals\", \"15% in 2020\",\"12.5% in 2020\",\n",
-    "              \"10% in 2020\",\"no clean energy goals\",\"25% in 2025\",\"50% in 2030\",\n",
-    "              \"40% in 2025, 80% in 2040, 100% in 2045\",\n",
-    "              \"50% in 2030, 100% in 2050\", \"70% in 2030, 100% in 2040\", \"8.5% in 2025\", \n",
-    "              \"15% in 2020\",\"25% in 2025, 50% in 2040\",\n",
-    "              \"18% in 2020\",\n",
-    "              \"16% in 2020, 23.5% in 2025, 31% in 2030, 38.5% in 2035\",\n",
-    "              \"2% in 2020\",\"10% in 2020\", \"no clean energy goals\",\n",
-    "              \"no clean energy goals, projected to have 50% in 2030\", \"20% in 2035\", \n",
-    "              \"15% in 2025\",\"55% in 2020, 75% in 2030\", \"80% in 2030, 100% in 2045\",\n",
-    "              \"10% in 2020\", \"no clean energy goals\", \"no clean energy goals\",\n",
-    "             )\n",
+    "label_list = (\n",
+    "    \"no clean energy goals\", \"no clean energy goals\",  \"15% in 2025\",\n",
+    "    \"60% in 2030, 100% in 2045\", \"30% in 2020, 100% in 2050\",\n",
+    "    \"44% in 2025\",\"25% in 2025\",\"no clean energy goals\", \"no clean energy goals\", \"no clean energy goals\",\n",
+    "    \"no clean energy goals\", \"25% in 2025\",\"10% in 2015\",\"20% in 2020\",\"no clean energy goals\",\n",
+    "    \"no clean energy goals\", \" 35% in 2030\",\"30% in 2020 and 50% in 2030\",\n",
+    "    \"80% in 2030, 100% in 2050\",\"15% in 2020 and 35% in 2025\",\n",
+    "    \"25% in 2025\",\"15% in 2020\", \"no clean energy goals\", \"15% in 2020\",\"12.5% in 2020\",\n",
+    "    \"10% in 2020\",\"no clean energy goals\",\"25% in 2025\",\"50% in 2030\",\n",
+    "    \"40% in 2025, 80% in 2040, 100% in 2045\",\n",
+    "    \"50% in 2030, 100% in 2050\", \"70% in 2030, 100% in 2040\", \"8.5% in 2025\",\n",
+    "    \"15% in 2020\",\"25% in 2025, 50% in 2040\",\n",
+    "    \"18% in 2020\",\n",
+    "    \"16% in 2020, 23.5% in 2025, 31% in 2030, 38.5% in 2035\",\n",
+    "    \"2% in 2020\",\"10% in 2020\", \"no clean energy goals\",\n",
+    "    \"no clean energy goals, projected to have 50% in 2030\", \"20% in 2035\",\n",
+    "    \"15% in 2025\",\"55% in 2020, 75% in 2030\", \"80% in 2030, 100% in 2045\",\n",
+    "    \"10% in 2020\", \"no clean energy goals\", \"no clean energy goals\",\n",
+    ")\n",
     "\n",
-    "data = {\"State\":  rps_states,\n",
-    "        \"Color\": color_list,\n",
-    "        \"Label\": label_list,\n",
-    "        }\n",
+    "data = {\"State\": rps_states, \"Color\": color_list, \"Label\": label_list}\n",
     "\n",
     "df = pd.DataFrame (data, columns=[\"State\", \"Color\", \"Label\"])"
    ]
@@ -94,27 +94,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "legend_col = [\"#EBEEF1\",\n",
-    "              \"#99CFF6\", \n",
-    "              \"#47AFFB\",\n",
-    "              \"#1490FF\",\n",
-    "              \"#107CED\",\n",
-    "              \"#0D68DC\",\n",
-    "              \"#0A55CC\",\n",
-    "             ]\n",
-    "legend_lab = [\"no goals\",\n",
-    "              \"0-15%\", \n",
-    "              \"15-20%\",\n",
-    "              \"20-30%\",\n",
-    "              \"30-50%\",\n",
-    "              \"50-70%\",\n",
-    "              \"70-100%\",\n",
-    "             ]\n",
+    "legend_colors = [\n",
+    "    \"#EBEEF1\",\n",
+    "    \"#99CFF6\",\n",
+    "    \"#47AFFB\",\n",
+    "    \"#1490FF\",\n",
+    "    \"#107CED\",\n",
+    "    \"#0D68DC\",\n",
+    "    \"#0A55CC\",\n",
+    "]\n",
+    "legend_labels = [\n",
+    "    \"no goals\",\n",
+    "    \"0-15%\",\n",
+    "    \"15-20%\",\n",
+    "    \"20-30%\",\n",
+    "    \"30-50%\",\n",
+    "    \"50-70%\",\n",
+    "    \"70-100%\",\n",
+    "]\n",
     "\n",
-    "data_leg = {\"Color\": legend_col,\n",
-    "            \"Label\": legend_lab,}\n",
-    "\n",
-    "df_leg = pd.DataFrame (data_leg, columns=[\"Color\", \"Label\"])"
+    "df_leg = pd.DataFrame({\"Color\": legend_colors, \"Label\": legend_labels})"
    ]
   },
   {
@@ -125,15 +124,40 @@
    "source": [
     "goals_demo = plot_states(\n",
     "    state_list=df.State, \n",
-    "    color_list=df.Color,\n",
+    "    colors=df.Color,\n",
     "    labels_list=df.Label,\n",
-    "    leg_color=df_leg.Color,\n",
-    "    leg_label=df_leg.Label,\n",
-    "    font_size=\"10pt\",\n",
-    "    web=True\n",
+    "    legend_colors=df_leg.Color,\n",
+    "    legend_labels=df_leg.Label,\n",
+    "    web=True,\n",
+    "    legend_title=\"Goals up to 2030\"\n",
     ")\n",
     "show(goals_demo)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goals_demo = plot_states(\n",
+    "    state_list=df.State, \n",
+    "    colors=df.Color,\n",
+    "    labels_list=df.Label,\n",
+    "    legend_colors=df_leg.Color,\n",
+    "    legend_labels=df_leg.Label,\n",
+    "    web=False,\n",
+    "    legend_title=\"Goals up to 2030\"\n",
+    ")\n",
+    "show(goals_demo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
